# openclaw-antmeta

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md
examples/: webapp_team.py
roles/: frontend-developer.yaml
src/antmeta/: __init__.py  cli.py  orchestrator.py  role_loader.py
src/antmeta/core/: __init__.py  team.py
tests/: test_core.py
